ubah bagian mencocokkan bentuk

--- a/index.html
+++ b/index.html
@@ -319,10 +319,10 @@
                 </div>
                 
                 <div class="shape-matching" style="margin-top: 30px;">
-                    <div class="shape-target" data-shape="square"></div>
-                    <div class="shape-target" data-shape="circle"></div>
-                    <div class="shape-target" data-shape="triangle"></div>
-                    <div class="shape-target" data-shape="star"></div>
+                    <div class="shape-target" data-shape="square">Persegi</div>
+                    <div class="shape-target" data-shape="circle">Lingkaran</div>
+                    <div class="shape-target" data-shape="triangle">Segitiga</div>
+                    <div class="shape-target" data-shape="star">Bintang</div>
                 </div>
                 
                 <div class="feedback" id="shape-feedback"></div>
@@ -658,4 +658,5 @@
         document.addEventListener('DOMContentLoaded', initPuzzle);
     </script>
 </body>
+
 </html>
